# fastapi-react

./: .editorconfig  .gitignore  CODEOWNERS  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/docker/initdb/: initdb.sql
.github/workflows/: github-actions-main.yml
devops/deploy/api/: Chart.yaml  values.yaml
devops/deploy/api/templates/: deployment.yaml
devops/deploy/apifront/: Chart.yaml  values.yaml
devops/deploy/apifront/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
devops/deploy/apifront/templates/tests/: test-connection.yaml
devops/deploy/kubernetes/: ing.yml
devops/deploy/reverse/: Chart.yaml  values.yaml
devops/deploy/reverse/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
devops/deploy/reverse/templates/tests/: test-connection.yaml
devops/docker/: Dockerfile
devops/docker/backend/: Dockerfile
devops/docker/frontend/: .dockerignore  Dockerfile
devops/docker/frontend/nginx/: nginx.conf
devops/docker/proxy/: Dockerfile
devops/docker/proxy/nginx/: nginx copy.conf  nginx.conf
devops/infra/cluster/: main.tf
doc/: temp.md
fastapi-server/: RAEDME.md  pyproject.toml
fastapi-server/app/: main.py
fastapi-server/app/routers/: items.py
fastapi-server/test-robot/: log.html  output.xml  remote  report.html  sample_test  simple  web
