[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = "Example for REST API created with FASTAPI"
authors = ["Sami Bister <sami.bister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
uvicorn = {extras = ["standard"], version = "^0.17.6"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
robotframework = "^5.0.1"
selenium = "^4.1.5"
robotframework-selenium2library = "^3.0.0"
webdrivermanager = "^0.10.0"
pylint = "^2.13.9"
pyflakes = "^2.4.0"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
bandit = "^1.7.4"
mypy = "^0.960"
black = "^22.3.0"
isort = "^5.10.1"
robotframework-requests = "^0.9.3"
xvfbwrapper = "^0.2.9"
robotframework-xvfb = "^1.2.2"
certifi = "^2022.5.18"
asn1crypto = "^1.5.1"
bcrypt = "^3.2.2"
robotframework-sshlibrary = "^3.8.0"
cryptography = "^37.0.2"
pyOpenSSL = "^22.0.0"
idna = "^3.3"
requests = {extras = ["security"], version = "^2.27.1"}
robotframework-browser = "^13.0.0"
robotframework-jsonlibrary = "^0.3.1"
robotframework-whitelibrary = "^1.6.0"
robotframework-seleniumlibrary = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
